# P01-P3D

./: CMakeLists.txt  README.md
assets/shaders/: shader.vert
include/: camera.hpp  model.hpp  renderer.hpp  shader_utils.hpp
src/: camera.cpp  main.cpp  model.cpp  renderer.cpp  shader_utils.cpp
